# Media-Conversion

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.server  Dockerfile.worker  README.md  cli.py  daily_convert.py  launch_webserver.ps1  manual_convert.py  pyproject.toml  requirements.txt  run_converter.ps1  videos.py  webserver.py  worker.py
domain/: constants.py
interfaces/: ffprobe.py  radarr.py  rq.py  sonarr.py  transcoder.py
interfaces/api/: __init__.py
interfaces/api/webhook/: __init__.py  radarr.py  sonarr.py
interfaces/cli/: __init__.py  convert.py  convert_all.py  convert_directory.py
service/: enqueue_transcode.py  episode_downloaded.py  movie_downloaded.py  transcode.py
transcoder/: dependencies.py  events.py  logging.py  main.py  observability.py  settings.py
